--- a/_posts/2014-09-07-sweden4.markdown
+++ b/_posts/2014-09-07-sweden4.markdown
@@ -1,5 +1,6 @@
 ---
 layout: post
+title: Utforksa (x2)
 ---
 
 This past week was the first week of classes at KTH. During this study period I am taking Human Computer Interaction, Swedish Society and Culture, and Swedish Language. Next study period I'll also add Computer Security. The system for adding, dropping, and trying out courses is so weird here. To me it seems quite disorganized, but somehow everyone gets the classes they need in the end. The other part of this education style that is different is that your final grade is almost solely based on your final exam grade. Many of the courses are taught in huge lecture halls. It is very different than Cal Poly Engineering. It will be a great experience to learn in a different way, but I'll let you all know in 4 months if it is a style I enjoy. One positive of this type of system is that during my first week I had practically no work and hardly any class. I was able to explore and relax. Yesterday I tagged along to a BBQ with my friends Ana, Enrique, and Fernando. We made s'mores for desert. Some of them had never had it before, so it was fun to play typical American for an afternoon. 
