--- a/_posts/2014-09-14-sweden4.markdown
+++ b/_posts/2014-09-14-sweden4.markdown
@@ -1,5 +1,6 @@
 ---
 layout: post
+title: Uppsala I Did it Again
 ---
 
 This past week was the best week I've had here thus far. On Monday I went canoeing around
