--- a/_posts/2014-09-14-sweden5.markdown
+++ b/_posts/2014-09-14-sweden5.markdown
@@ -1,5 +1,6 @@
 ---
 layout: post
+title: Happy election week!
 ---
 
 This past week was the best week I've had here thus far. On Monday I went canoeing around
