--- a/_posts/2014-09-30-sweden7.markdown
+++ b/_posts/2014-09-30-sweden7.markdown
@@ -1,5 +1,6 @@
 ---
 layout: post
+title: I Went Through a lot of RIGAmarole to Get Here
 ---
 
 "There are a Latvia better puns to use, but that's the best I could come up with..." - Sam Brown.
