--- a/_posts/2014-10-11-sweden8.markdown
+++ b/_posts/2014-10-11-sweden8.markdown
@@ -1,5 +1,6 @@
 ---
 layout: post
+title: Kanelbulle, Dragons, and Rage Cage. OH MY!
 ---
 
 Sorry for not posting in a while! Things haven't been too busy around here except for 
