--- a/_posts/2014-10-21-sweden9.markdown
+++ b/_posts/2014-10-21-sweden9.markdown
@@ -1,5 +1,6 @@
 ---
 layout: post
+title: We all Live in a Yellow Submarine
 ---
 
 Hej hej from London, England! Erik and I had a fabulous time exploring for the past few days. 
