--- a/_posts/2014-10-27-sweden10.markdown
+++ b/_posts/2014-10-27-sweden10.markdown
@@ -1,5 +1,6 @@
 ---
 layout: post
+title: There's Norway I Can Make Another Good Pun ;)
 ---
 
 Hej hej everyone! Last night I got back from Oslo, Norway. I had 6 days with nothing to do 
