--- a/_posts/2014-11-02-sweden11.markdown
+++ b/_posts/2014-11-02-sweden11.markdown
@@ -1,5 +1,6 @@
 ---
 layout: post
+title: Trying to COPEnhagen with your life? Ireland you some Scottish Whisky...
 ---
 
 What an amazing last week! I traveled with two other Cal Poly study abroad students to 3 different 
