--- a/_posts/2014-11-09-sweden12.markdown
+++ b/_posts/2014-11-09-sweden12.markdown
@@ -1,5 +1,6 @@
 ---
 layout: post
+title: Första snön! ❄
 ---
 
 We had our first day of snow on Thursday of this week! It was so exciting. Ever since we started 
