--- a/_posts/2014-11-27-sweden13.markdown
+++ b/_posts/2014-11-27-sweden13.markdown
@@ -1,5 +1,6 @@
 ---
 layout: post
+title: Bremen, Berlin, and Beers
 ---
 
 Sorry it's been so long since I updated you all! I am going into my last month of school at KTH,
