--- a/_posts/2014-12-03-sweden14.markdown
+++ b/_posts/2014-12-03-sweden14.markdown
@@ -1,5 +1,6 @@
 ---
 layout: post
+title: Thanksgiving in Lapland!
 ---
 
 I had a fantastically freezing Thanksgiving in Lapland, Sweden. See below a map of the two cities
